# web-frameworks

./: .gitignore  README.md
go-echo/: go.mod  go.sum  main.go
go-gin/: go.mod  main.go
kotlin-ktor/: build.gradle.kts
kotlin-ktor/src/main/kotlin/app/: Application.kt
kotlin-ktor/src/main/kotlin/app/plugins/: Routing.kt
kotlin-ktor/src/test/kotlin/app/: ApplicationTest.kt
kotlin-ktor/src/test/kotlin/deeean/: ApplicationTest.kt
nodejs-express/: package.json
nodejs-express/src/: index.ts
nodejs-fastify/: package.json  tsconfig.json
nodejs-fastify/src/: index.ts
python-fastapi/: main.py  requirements.txt
rust-actix/: Cargo.toml
rust-actix/src/: main.rs
rust-rocket/: Cargo.toml  Rocket.toml
rust-rocket/src/: main.rs
