[package]
name = "rust-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0" }
env_logger = { version = "0.9.0" }
serde = { version = "1.0.137", features = ["derive"] }